quick fix overflow bug

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @media screen and (max-width: 1600px) {
     body {
         zoom:0.96;
+        padding-bottom:10px !important;
     }
 }
 
@@ -16,6 +17,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    scrollbar-width: none;
 }
 
 body {
@@ -158,7 +160,7 @@ button {
     width:115px;
     height: 47px;
     border-radius: 4px;
-    margin-right: 8px;
+    margin-right: 0.53rem;
     margin-top:2px;
     border:none;
     outline: none;
@@ -285,7 +287,7 @@ img {
 
 #board-card1, #board-card2, #board-card3, #board-card4, #board-card5 {
     height:125px;
-    margin-right: 3px;
+    margin-right: 0.22rem;
 }
 
 .board-container {
@@ -335,10 +337,16 @@ input {
     background: rgba(0,0,0,0.5)
 }
 
-
 /* # ###
 /* SCREEN RESPONSIVENESS 
 /* # ###*/
+
+@media only screen and (min-width: 2000px) {
+    :root {
+        zoom:1.1;
+    }
+}
+
 
 @media only screen and (min-width: 1750px) {
     .history {
@@ -482,7 +490,7 @@ input {
         margin-top: -84px;
     }
     #board-card1, #board-card2, #board-card3, #board-card4, #board-card5 {
-        height:90px;
+        height:88px;
     }
     #villain-card1, #villain-card2, #hero-card1, #hero-card2  {
         width: 47px;
